# kiwi-store

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: benchmarks.yml
benches/: benches.rs
proto/: kiwi-store.proto
src/: err.rs  error.rs  lib.rs  thread_pool.rs
src/store/: kiwi_store.rs  mod.rs  sled_store.rs
tests/: cli.rs  client.rs  kv_store.rs  tests.rs  thread_pool.rs
