[package]
name = "kvs"
version = "0.1.0"
authors = ["Tomek Karwowski <to.karwowski@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"