[package]
name = "kvs"
version = "0.1.0"
authors = ["Tomek Karwowski <to.karwowski@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61" # we use json format as it is human readable, used in examples and probalby most popular
log = "0.4.14"
stderrlog = "0.5.1"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"